--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li>
           <b>Test Image - </b><img src="bottle.jpeg" class="img-responsive">
         </li>
-        <h5>Output on <b>WolfRam</b> -
+        <h5>Output on <b>WolfRam</b> - thermos
           <span></span>  
         </h5>
         <h5>Output on <b>Microsoft Azure</b> - bottle
@@ -30,7 +30,7 @@
         <div class="mini_result">
           <h4>Result - </h4>
           <hr>
-          <h4></h4>
+          <h4>Microsoft Azure is more Accurate</h4>
         </div>
   
       </div>
@@ -40,7 +40,7 @@
         <li>
           <b>Test Image - </b><img src="shoes.jpeg" class="img-responsive">
         </li>
-        <h5>Output on <b>WolfRam</b> -
+        <h5>Output on <b>WolfRam</b> - plaster bandage
           <span></span>  
         </h5>
         <h5>Output on <b>Microsoft Azure</b> - bowling shoes
@@ -50,7 +50,7 @@
         <div class="mini_result">
           <h4>Result - </h4>
           <hr>
-          <h4></h4>
+          <h4>Microsoft Azure is more Accurate</h4>
         </div>
   
       </div>
@@ -61,7 +61,7 @@
         <li>
           <b>Test Image - </b><img src="phone.jpeg" class="img-responsive">
         </li>
-        <h5>Output on <b>WolfRam</b> -
+        <h5>Output on <b>WolfRam</b> - paper clip
           <span></span>  
         </h5>
         <h5>Output on <b>Microsoft Azure</b> - cell phone
@@ -71,11 +71,14 @@
         <div class="mini_result">
           <h4>Result - </h4>
           <hr>
-          <h4></h4>
+          <h4>Microsoft Azure is more Accurate</h4>
         </div>
   
       </div>
-  
+  <hr><hr>
+      <p>
+      Microsoft Azure is more accurate in 3 of the images and Wolfram is more accurate in 0 of the images, thus Microsoft Azure is more Accurate
+      </p>
             
   </body>
   </html>
